--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	header {
 		background-color: #7b5e57;
 		color: #fff;
-		background-image:url("images/BetweenTheLines.PNG");
+		background-image: url("images/header.PNG");
 		height: 250px;
 		text-align: center;
 		padding-top: 70px;
@@ -311,7 +311,7 @@
 			<b>White Nights</b> by Fyodor Dostoevsky<br><br><br>
 			
 			<a href="http://amazon.ie/White-Nights-Fjodor-Dostoyevsky-Fyodor/dp/0241252083/ref=sr_1_1?adgrpid=174113336559&dib=eyJ2IjoiMSJ9.0LR7-CwNXOZC_OCWvpGvVtrBYCBPk_AHisEPPFutxPI47uUmM9OexHIvcHN6PSl2T2Wof1eNuqbO36vd2L9i802aFBm6L9YgHqpihG6Zb8NLIYWoGfhJBH7F9lTr119devKA4N5dgQt3ZgbBBPJHmzEN1jsDiY8FN17mfwlL-JRQS_pnYmYiHiqm8OlGO0PujkLTuK3ScpCz-vPNsypHSSa6EpAd2WOlWGZupsdFOXiwkOBfQQ8qzlB_wIn4qrjCQ22ZsWq62K2QLMJUSXwAmtNdjsMrkd6LRZo6lWrVfV4.V3jk8sQxP2Ol-c20CDNNgNfm9n0R3E0MmZY8-7ba8lM&dib_tag=se&gad_source=1&hvadid=739646800684&hvdev=c&hvlocphy=1007850&hvnetw=g&hvqmt=e&hvrand=15520667923503435531&hvtargid=kwd-300733981184&hydadcr=7983_2401583&keywords=white+nights&qid=1762723589&sr=8-1" target="_blank">
-			<img src="images/white-small.PNG" alt="White Nights">
+			<img src="images/white-small.png" alt="White Nights">
 			</a>
 			<p>White Nights is a short story by Fyodor Dostoevsky that was published in 1848. Set in St. Petersburg, it is the story of a young man fighting his inner restlessness. A light and tender narrative, it delves into the torment and guilt of unrequited love. Both protagonists suffer from a deep sense of alienation that initially brings them together. A blend of romanticism and realism, the story appeals gently to the senses and feelings.</p>
 			<p><q><em>I am a dreamer. I know so little of real life that I just can’t help re-living such moments as these in my dreams, for such moments are something I have very rarely experienced. I am going to dream about you the whole night, the whole week, the whole year.</em></q></p>
