--- a/cafes.html
+++ b/cafes.html
@@ -246,7 +246,7 @@ table {
 		<div class="gallery">
 			<figure>
 				<a href="https://www.instagram.com/chilldbeans/"target="_blank">
-				<img src="images/chill.PNG" alt="Chill The Beans"> 
+				<img src="images/chill.png" alt="Chill The Beans"> 
 				</a>
 				<figcaption>
 				<b>Chill The Beans</b> This one's special because it's right here in my city! I went there by myself, just me and my book, and it was the perfect little escape. The vibe is so cozy and different, and the coffe was fantastic. It's definitly my new go-to spot for quiet reading afternoons.</figcaption>
@@ -254,7 +254,7 @@ table {
 			
 			<figure>
 				<a href="https://lab82.ie/" target="_blank" rel="noopener noreferrer">
-				<img src="images/lab.PNG" alt="Lab 82 Coffee">
+				<img src="images/lab.png" alt="Lab 82 Coffee">
 				</a>
 				<figcaption>
 				<b>Lab 82 Coffee</b> I went there with a friend and we absolutely loved it! The place has such a unique vibe, creative decor, great music, and a really warm atmosphere. The coffee was amazig and the whole experience felt special. Can'n wait to go back!
@@ -263,7 +263,7 @@ table {
 			
 			<figure>
 				<a href="https://saltandsagecafe.com/" target="_blank">
-				<img src="images/charleville.PNG" alt="Salt & Sage">
+				<img src="images/charleville.png" alt="Salt & Sage">
 				</a>
 				<figcaption>
 				<b>Salt & Sage</b> The experience was excellent! The place is very cozy, with charming decor and just the right background music. The coffee is high quality and the desserts are amazing, and I absolutely loved sitting there with my book. It's the kind of place that makes you want to stay for hours. The staff was super friendly too.</figcaption>
