--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	header {
 		background-color: #7b5e57;
 		color: #fff;
-		background-image: url("images/header.PNG");
+		background-image: url("images/header.png");
 		height: 250px;
 		text-align: center;
 		padding-top: 70px;
