--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
 	.book-box a {
 		display: inline-block;
 		margin: 8px;
+		
 	}
 	
 	.cover {
@@ -256,6 +257,7 @@
 		background: white;
 		box-shadow: 3px 3px 10px rgba(0,0,0,0.2);
 		padding: 5px;
+		
 	}
 	
 	.covers-grid {
@@ -321,8 +323,8 @@
 	<section>
 		<h2>My favorite Books of 2025</h2>
 		<p>Here are some of my favorite books this year - you can click to buy or learn more</p>
-		
-		<ol class="book-list">
+		<p>The average price of book in Europe is around &euro;12,99</p>
+		<ul class="book-list">
 			
 		
 			<li>
@@ -437,7 +439,7 @@
 				 </div>
 			</li>
 			
-		</ol>
+		</ul>
 		
 	<div class="book-box">
 		<h2 class="box-title">The best book covers</h2>
